Fixed `Grid` and `Button` spacings

--- a/components/button/styles.css
+++ b/components/button/styles.css
@@ -54,6 +54,7 @@
     position: fixed;
     bottom: var(--spacing);
     right: var(--spacing);
+    padding: var(--half-spacing) var(--spacing);
     z-index: 5;
   }
 
